[package]
name = "kemutil"
version = "0.1.0"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
csidh = ["csidh-rust"]

[dependencies]

[dependencies.oqs]
git = "https://github.com/thomwiggers/liboqs-rust.git"
branch = "dirty-thesis-benchmarks"
default-features = false
features = ["non_portable", "kems"]
optional = true

[dependencies.csidh-rust]
git = "https://github.com/thomwiggers/csidh-rust.git"
branch = "ctidh"
optional = true
