[package]
name = "xmss-rs"
version = "0.1.0"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
edition = "2018"
links = "xmss"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
level1 = []
level3 = []
level5 = []

[dependencies]

[build-dependencies]
cc = "1.0"

[dev-dependencies]
lazy_static = "1"
